--- a/Players/unknownidiguess.json
+++ b/Players/unknownidiguess.json
@@ -1,1 +1,1 @@
-{"Id":782441001,"DisplayName":"924","Username":"924","Level":50,"XP":100,"Developer":true,"IsBooster":false,"BootMultiplier":0}
+{"Id":924,"DisplayName":"924","Username":"924","Level":50,"XP":100,"Developer":true,"IsBooster":false,"BootMultiplier":0}
