--- a/Servers/ManifestInfoList.json
+++ b/Servers/ManifestInfoList.json
@@ -3,7 +3,7 @@
     "ManifestString": "5112800850661766506",
     "FriendlyName": "September 27th, 2018",
     "ManifestPatchInfo": {
-      "AssemmblyURL": "https://cdn.glitch.com/2fd2777e-93eb-4d2e-8011-f1f3e4081a24%2FAssembly-CSharp.dll",
+      "AssemmblyURL": "https://cdn.glitch.com/2fd2777e-93eb-4d2e-8011-f1f3e4081a24%2FAssembly-CSharp.dll?v=1624583825314",
       "AssemmblyHash": "b3133d153a7cb10ea5436273d8d40e84",
       "PUNAppIDOffset": 165303984,
       "VoiceAppIDOffset": 165304024
